Fix rounded search box on Safari iOS

--- a/src/app/components/App/App.global.scss
+++ b/src/app/components/App/App.global.scss
@@ -66,3 +66,7 @@ input[type='search'],
 button {
   outline: none;
 }
+
+input[type='search'] {
+  appearance: none;
+}
